// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdministrationSection /> renders correctly 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={12}
  >
    <h5>
      <strong>
        test
      </strong>
    </h5>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    md={6}
    mdPush={6}
    xs={12}
  >
    <Uncontrolled(Panel)>
      <PanelBody
        bsClass="panel"
        collapsible={false}
      >
        example
      </PanelBody>
    </Uncontrolled(Panel)>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    md={6}
    mdPull={6}
    xs={12}
  >
    <Uncontrolled(Panel)>
      <div>
        Foo
      </div>
    </Uncontrolled(Panel)>
  </Col>
</Row>
`;

exports[`<AdministrationSection /> renders correctly with optional icon and footer elements 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={12}
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        md={6}
        xs={12}
      >
        <Flex
          alignContent="stretch"
          alignItems="center"
          direction="row"
          justifyContent="flex-start"
          wrap="nowrap"
        >
          <FlexItem
            alignSelf={null}
            basis="auto"
            grow={1}
            shrink={1}
          >
            <h5>
              <strong>
                test
              </strong>
            </h5>
          </FlexItem>
          <FlexItem
            alignSelf={null}
            basis="auto"
            grow={0}
            shrink={1}
          >
            <Icon
              faStyle="fas"
              fixedWidth={false}
              name="check"
              pullRight={false}
            />
          </FlexItem>
        </Flex>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={8}
        smHidden={true}
      />
    </Row>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    md={6}
    mdPush={6}
    xs={12}
  >
    <Uncontrolled(Panel)>
      <PanelBody
        bsClass="panel"
        collapsible={false}
      >
        example
      </PanelBody>
      <PanelFooter
        bsClass="panel"
      >
        <div>
          Bar
        </div>
      </PanelFooter>
    </Uncontrolled(Panel)>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    md={6}
    mdPull={6}
    xs={12}
  >
    <Uncontrolled(Panel)>
      <div>
        Foo
      </div>
    </Uncontrolled(Panel)>
  </Col>
</Row>
`;
